--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "nodestart": "node ./bin/www"
+    "nodemon-start": "nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "fs": "0.0.1-security",
+    "http": "0.0.0",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "mysql": "^2.15.0",
+    "path": "^0.12.7",
     "serve-favicon": "~2.4.5"
   }
 }
